# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  hexlet-io-courses.html  pyproject.toml
page_loader/: cli.py  constants.py  engine.py  getter.py  loader.py  logger.py  names_paths_urls.py  network.py  save.py  storage.py  utils.py
page_loader/scripts/: page_loader.py
tests/: test_cli.py  test_cli_logger.py  test_engine.py  test_logger.py  test_names_paths_urls.py  test_network.py  test_page_loader.py  test_save.py  test_storage.py  test_utils.py
tests/fixtures/: const.py  example.html  index.html
tests/fixtures/style/: style.css
