[tool.poetry]
name = "GeVhoo_page_loader"
version = "0.1.0"
description = "Useful utility to download pages from the network"
authors = ["GeVhoo <gvahrushev@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
