[tool.poetry]
name = "GeVhoo_page_loader"
version = "0.1.5"
description = "Useful utility to download pages from the network"
authors = ["GeVhoo <gvahrushev@mail.ru>"]
repository = "https://github.com/GeVhoo/python-project-lvl3"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
coverage = "^5.0.3"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
progress = "^1.5"

[tool.poetry.scripts]
gv-page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
